force-app/main/default/objects/Master_relations__c/Master_relations__c.object-meta.xml
<CustomObject>
    <label>Master relations</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Master relations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>