force-app/main/default/objects/Master_relations__c/fields/DistributionChannel_code__c.field-meta.xml
<CustomField>
    <fullName>DistributionChannel_code__c</fullName>
    <label>DistributionChannel code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>