force-app/main/default/objects/Master_relations__c/fields/DistributionChannel_name__c.field-meta.xml
<CustomField>
    <fullName>DistributionChannel_name__c</fullName>
    <label>DistributionChannel name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>