force-app/main/default/objects/Master_relations__c/fields/SalesOffice_code__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice_code__c</fullName>
    <label>SalesOffice code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>