force-app/main/default/objects/Master_relations__c/fields/SalesOffice_name__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice_name__c</fullName>
    <label>SalesOffice name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>