force-app/main/default/objects/Master_relations__c/fields/SalesOrg_code__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg_code__c</fullName>
    <label>SalesOrg code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>