force-app/main/default/objects/Master_relations__c/fields/SalesOrg_name__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg_name__c</fullName>
    <label>SalesOrg name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>