force-app/main/default/objects/Master_relations__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <length>30</length>
    <type>Text</type>
</CustomField>